# ayatiworks-backend-fastapi

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ENDPOINT_PROTECTION_STATUS.md  PERMISSIONS.md  README.md  alembic.ini  check_db_schema.py  check_duplicates.py  debug_blog_id.py  debug_blog_update.py  debug_mysql.py  debug_trace.py  final_verify.py  fix_client_permissions.py  fix_db_schema.py  fix_meta_permissions.py  out.txt  pyproject.toml  requirements.txt  reset_db.py  seed.py  seed.py.backup  seed_campaigns.py  test_api_v2.py  test_blog_api.py  test_blog_enhancements.py  test_crash.py  test_full_flow.py  test_remaining.py  test_upload.py  update_exceptions.py  verify_leave_attendance.py  verify_output.txt  verify_output_v2.txt  verify_output_v3.txt  verify_perms.py  (+2 more)
app/: celery_app.py  config.py  database.py  main.py
app/api/: deps.py
app/core/: cache.py  error_handler.py  exceptions.py  feature_control.py  permissions.py  security.py
app/models/: __init__.py  attendance.py  audit.py  auth.py  base.py  blog.py  calendar.py  client.py  communication.py  company.py  employee.py  hr_advanced.py  invoice.py  leave.py  media.py  meta.py  notification.py  organization.py  payroll.py  project.py  public.py  report.py  security.py  settings.py  sprint.py  team.py  ticket.py
app/schemas/: attendance.py  auth.py  blog.py  client.py  common.py  company.py  employee.py  invoice.py  leave.py  meta.py  organization.py  permission.py  project.py  public.py  role.py  team.py
app/services/: attendance_service.py  audit_service.py  auth_service.py  blog_service.py  (+7 more)
migrations/: env.py
scripts/: test_render_email.py  update_roles.py
test_email_output/: leave_approve.html  leave_reject.html  otp.html  password_reset.html  project_assigned.html  project_created.html  task_assigned.html  team_added.html  welcome.html
tests/: conftest.py
(+48 files in other folders)
