[project]
name = "enterprise-hrms"
version = "1.0.0"
description = "Enterprise HRMS/CRM/PMS Backend"
requires-python = ">=3.11"

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    ".pytest_cache",
]

# Select linting rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (ok in tests)
    "S104",  # binding to all interfaces (ok for containers)
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and have longer lines
"tests/*" = ["S101", "E501"]
# Allow print in seed.py
"seed.py" = ["T201"]

[tool.ruff.format]
# Use double quotes
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
